// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Chip renders correctly 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #F3F2FF;
  border-radius: 4px;
  color: #7a55e3;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.75rem;
  font-weight: 600;
  height: 28px;
  max-width: 320px;
  min-width: 44px;
  padding: 0.25rem 0.5rem;
}

.c0:hover,
.c0:active,
.c0:focus,
.c0[aria-selected='true'] {
  background: #E8E5FF;
}

.c0.focus,
.c0:focus {
  outline: none;
}

.c0:active {
  border-color: #6C43E0;
}

.c0[disabled] {
  background: #F5F6F7;
  color: #707781;
}

.c0[disabled]:hover {
  background: #F5F6F7;
}

.c1 {
  font-size: 1rem;
  line-height: 1.5rem;
  font-size: inherit;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

<span
  className="c0 "
  onBlur={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  tabIndex={0}
>
  <span
    className="c1"
    fontSize="medium"
  >
    chip
  </span>
</span>
`;

exports[`Chip renders disabled 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #F3F2FF;
  border-radius: 4px;
  color: #7a55e3;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.75rem;
  font-weight: 600;
  height: 28px;
  max-width: 320px;
  min-width: 44px;
  padding: 0.25rem 0.5rem;
}

.c0:hover,
.c0:active,
.c0:focus,
.c0[aria-selected='true'] {
  background: #E8E5FF;
}

.c0.focus,
.c0:focus {
  outline: none;
}

.c0:active {
  border-color: #6C43E0;
}

.c0[disabled] {
  background: #F5F6F7;
  color: #707781;
}

.c0[disabled]:hover {
  background: #F5F6F7;
}

.c1 {
  font-size: 1rem;
  line-height: 1.5rem;
  font-size: inherit;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

<span
  className="c0 "
  disabled={true}
  onBlur={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
>
  <span
    className="c1"
    fontSize="medium"
  >
    chip
  </span>
</span>
`;
